--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
-BOT_TOKEN=8501934453:AAFmuyfMtatqxI2bjkum17oljxC_inUA7wk
-OWNER_CHAT_ID=1234913982
-APP_BASE_URL=https://loops-honest-yards-automatic.trycloudflare.com
+BOT_TOKEN=
+OWNER_CHAT_ID=
+APP_BASE_URL=
 ALLOW_INSECURE_DEBUG_USER=false
-TRIBUTE_URL_LITE=https://t.me/tribute/app?startapp=sNXU
-TRIBUTE_URL_PLUS=https://t.me/tribute/app?startapp=sNXW
-TRIBUTE_URL_PRO=https://t.me/tribute/app?startapp=sNXW
-
+TRIBUTE_URL_LITE=
+TRIBUTE_URL_PLUS=
+TRIBUTE_URL_PRO=
